--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,7 @@ format:
     css: css/style.css
 
 website: 
+  google-analytics: "G-VGC31NCJ07"
   navbar: 
     background: "#f8f9fa"
     search: true
